# InSAR-Data-Analysis-Tool

./: README.md  clip_insar_to_aoi.py  insar_deformation_viewer.py  insar_project.py  inspect_insar_outputs.py
.claude/: settings.json
Data/old/project_dam_D/: parameters.json
Data/old/project_dam_D/aoi_only/: aoi_polygon.geojson  results_aoi_masked.nc
Data/old/project_dam_D/geotiffs/: dem.tif  disp_ps_2018-11-06.tif  disp_ps_2018-11-18.tif  (+9 more)
Data/project_dam_D/: manifest.json  results_tight.nc  velocity_map.html
Data/project_dam_D/aoi_only/: aoi_mean_displacement_timeseries.csv
Data/project_dam_D/geotiffs/: disp_ps_2019-01-05.tif  disp_ps_2019-01-17.tif  disp_sbas_2018-11-18.tif  disp_sbas_2018-11-30.tif  disp_sbas_2018-12-24.tif  disp_sbas_2019-01-05.tif  disp_sbas_2019-01-17.tif  disp_sbas_2019-01-29.tif  psf.tif  velocity_sbas.tif
insar-viewer/: pyproject.toml
insar-viewer/backend/: pyproject.toml
insar-viewer/backend/src/insar_viewer/: app.py  launcher.py  settings.py
insar-viewer/backend/src/insar_viewer/api/: routes_export.py  routes_metadata.py  routes_overlay.py  routes_pixel.py  routes_points.py  routes_project.py
insar-viewer/backend/src/insar_viewer/project/: discovery.py  loader.py  registry.py  schema.py  state.py
insar-viewer/backend/src/insar_viewer/rendering/: canvas_payload.py  png.py
insar-viewer/backend/tests/: test_discovery.py  test_schema.py
insar-viewer/frontend/: package-lock.json  package.json  vite.config.ts
insar-viewer/frontend/src/: App.tsx  index.css
insar-viewer/scripts/: dev.ps1  install.ps1  launch.pyw
(+77 files in other folders)
