[project]
name = "insar-viewer-backend"
version = "1.0.0"
description = "InSAR Viewer FastAPI backend"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "xarray>=2024.6",
    "netcdf4>=1.7",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "Pillow>=10.4",
    "pywebview>=5.1",
    "platformdirs>=4.2",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insar_viewer"]

[tool.mypy]
strict = true
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
